fix: use Paths.get() instead of Path.of() for Java 8 compatibility